fixed a lot of little bugs; user can have html code as their name or properties names and it won't actually run the code; long user names don't mess up the spacing

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -52,7 +52,7 @@ h3 {
 	font-size: 2em;
 	font-weight: normal;
 
-	margin-top: -.4em;
+	margin-top: -.3em;
 	margin-bottom: -.75em;
 
 }
